--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -376,7 +376,7 @@ body, html {
 .ba-header {
   min-height: 900px;
   padding-top: 45px;
-  background: #024869 url("../../assets/img/hero-img.jpg") 50% no-repeat;
+  background: #434a45 url("../../assets/img/intro.jpg") 50% no-repeat;
   background-size: cover;
   position: relative; }
 
@@ -384,24 +384,6 @@ body, html {
   float: left;
   margin: 0;
   padding: 5px 0 0 0; }
-
-.ba-horizontal-line {
-  width: 86px;
-  height: 2px;
-  background-color: #ffffff;
-  margin: 0 auto 38px; }
-
-.ba-scroll {
-  position: absolute;
-  bottom: 46px;
-  left: 50%;
-  width: 93px;
-  margin-left: -46px;
-  height: 93px;
-  border-radius: 50%;
-  background: url(../../assets/img/button-hero.svg) no-repeat 50%; }
-  .ba-scroll:hover {
-    box-shadow: 0 0 5px 2px #ffffff; }
 
 .ba-menu {
   display: flex;
@@ -420,45 +402,282 @@ body, html {
   .ba-menu__link {
     display: block;
     text-decoration: none;
-    color: #fffefe;
-    font-family: "Lato", sans-serif;
-    font-size: 14px;
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 1;
-    text-transform: uppercase;
-    position: relative; }
-    .ba-menu__link:before {
-      display: block;
-      background-color: #ffffff;
-      position: absolute;
-      content: "";
-      left: 0;
-      right: 0;
-      top: 15px;
-      height: 3px;
-      opacity: 0;
-      transform: translateY(-15px);
-      transition: transform .2s ease-in, opacity .2s ease-in; }
-    .ba-menu__link:hover:before {
-      opacity: 1;
-      transform: translateY(0); }
+    line-height: 12px; }
+    .ba-menu__link:hover {
+      border-radius: 16px;
+      border: 1px solid #ffffff; }
 
 .ba-banner {
   margin: 0 auto;
-  padding-top: 228px;
+  padding-top: 232px;
   text-align: center; }
   .ba-banner__title {
     color: #ffffff;
-    font-family: "Raleway", sans-serif;
-    font-size: 48px;
-    font-weight: 700;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 35px;
+    font-weight: 300;
     line-height: 70px;
     text-transform: uppercase; }
   .ba-banner__description {
-    color: #fffefe;
-    font-family: "Lato", sans-serif;
-    font-size: 22px;
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
     font-weight: 400;
-    line-height: 30px;
-    text-align: center;
-    letter-spacing: 1.1px; }
+    line-height: 28px;
+    text-align: center; }
+
+.ba-scroll {
+  position: absolute;
+  bottom: 46px;
+  left: 50%;
+  width: 36px;
+  height: 36px;
+  border-radius: 50%;
+  background: url(../../assets/img/header-btn.png) no-repeat 50%; }
+  .ba-scroll:hover {
+    box-shadow: 0 0 5px 2px #ffffff; }
+
+.ba-portfolio {
+  padding: 100px 0;
+  text-align: center; }
+  .ba-portfolio__title {
+    color: #333b46;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 12px;
+    text-transform: uppercase;
+    margin: 0 auto;
+    margin-bottom: 41px; }
+  .ba-portfolio__description {
+    color: #81868e;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+    margin: 0 auto;
+    margin-bottom: 81px; }
+
+.ba-filter {
+  margin-bottom: 70px;
+  text-align: center; }
+
+.ba-filter a {
+  display: inline-block;
+  text-decoration: none;
+  color: #464646;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 12px;
+  padding: 0 16px;
+  height: 32px;
+  margin: 0 5px; }
+
+.ba-filter .ba-active {
+  border-bottom: 2px solid #19bd9a; }
+
+.ba-filter a:hover {
+  color: #19bd9a; }
+
+.ba-filter a:active {
+  text-decoration: none;
+  position: relative;
+  top: 1px; }
+
+.ba-grid-item {
+  float: left;
+  width: 25%;
+  margin-bottom: 10px; }
+
+.ba-grid-item img {
+  display: block;
+  max-width: 100%; }
+
+.ba-team {
+  padding: 100px 0;
+  text-align: center; }
+  .ba-team__title {
+    color: #333b46;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 12px;
+    text-transform: uppercase;
+    margin: 0 auto;
+    margin-bottom: 41px; }
+  .ba-team__description {
+    color: #81868e;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+    margin: 0 auto;
+    margin-bottom: 60px; }
+
+.ba-team-slide__photo {
+  float: left; }
+
+.ba-team-slide__text {
+  width: 370px;
+  float: right;
+  text-align: right; }
+
+.ba-team__title {
+  color: #464646;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 30px 0 15px; }
+
+.ba-team__subtitle {
+  color: #81868e;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 14px;
+  font-weight: 300;
+  font-style: italic;
+  text-transform: uppercase;
+  margin-bottom: 30px; }
+
+.ba-team__text {
+  color: #81868e;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 25px; }
+
+.ba-contact {
+  padding: 60px 0;
+  background: #262626 url("../../assets/img/contact-us-bg.jpg") 50% no-repeat;
+  background-size: cover;
+  text-align: center; }
+  .ba-contact__title {
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 25px;
+    margin-bottom: 40px; }
+  .ba-contact__link {
+    color: #ffffff;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 12px; }
+
+.ba-testimonials {
+  padding: 100px 0;
+  text-align: center; }
+  .ba-testimonials__title {
+    color: #333b46;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 12px;
+    text-transform: uppercase; }
+  .ba-testimonials__description {
+    color: #81868e;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px; }
+
+.ba-testimonials-slider {
+  padding-top: 60px; }
+
+.ba-testimonials-slide {
+  padding-top: 50px;
+  text-align: left; }
+
+.ba-testimonials-slide__photo {
+  float: left;
+  margin-left: 96px; }
+
+.ba-testimonials-slide__text {
+  width: 754px;
+  float: right; }
+
+.ba-testimonials-slide__title {
+  color: #19bd9a;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 20px;
+  text-transform: uppercase;
+  margin-bottom: 12px; }
+
+.ba-testimonials-slide__subtitle {
+  color: #464646;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+  text-transform: uppercase; }
+
+.ba-testimonials-slide__text {
+  color: #81868e;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 28px;
+  margin-bottom: 30px; }
+
+.ba-contact-us {
+  padding: 80px 0;
+  text-align: center; }
+  .ba-contact-us__title {
+    color: #333b46;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 12px;
+    text-transform: uppercase; }
+  .ba-contact-us__description {
+    color: #81868e;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px; }
+
+#map {
+  height: 500px;
+  margin: 50px auto 0; }
+
+/* Optional: Makes the sample page fill the window. */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0; }
+
+.ba-footer {
+  padding: 70px;
+  text-align: center; }
+  .ba-footer__title {
+    color: #81868e;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px; }
+
+.ba-social-icon-container {
+  margin: 58px 0 50px 0; }
+
+.ba-social-icon {
+  list-style: none;
+  padding: 0;
+  margin: 0; }
+
+.ba-social-icon__item {
+  display: inline-block;
+  margin: 13px; }
+
+.ba-social-icon__link {
+  text-decoration: none; }
+
+.ba-social-icon__img:hover {
+  transform: scale(1.3); }
